[tool.poetry]
name = "transformerbot"
version = "0.1.0"
description = ""
authors = ["GodVov4 <volume245@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
aiogram = "3.1.1"
deepgram-sdk = "^2.11.0"
aiopath = "0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
